--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -5,6 +5,8 @@
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^17.2.3",
-    "express": "^5.2.1"
+    "express": "^5.2.1",
+    "mongodb": "^7.1.0",
+    "mongoose": "^9.2.2"
   }
 }
